<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/home_text_sensor_select"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/layout_left_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_left_sensor"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#FF1980CA"
                android:padding="5dp"
                android:text="@string/home_text_left"
                android:textColor="#ffffff" />

            <TextView
                android:id="@+id/text_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/connected" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_right_sensor"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="#FF1980CA"
                android:padding="5dp"
                android:text="@string/home_text_right"
                android:textColor="#ffffff" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="2dp"
                android:text="Disconnected" />
        </LinearLayout>

    </RelativeLayout>

    <View
        android:id="@+id/line_view_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/layout_left_right"
        android:layout_marginTop="10dp"
        android:background="#000000" />

    <Button
        android:id="@+id/btn_setting"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/line_view_1"
        android:layout_marginTop="10dp"
        android:background="#FF1980CA"
        android:text="@string/tv_text_etting"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/btn_setting"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="#FF1980CA"
        android:text="@string/home_text_start"
        android:textAllCaps="false"
        android:textColor="#ffffff" />

    <View
        android:id="@+id/line_view_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/btn_start"
        android:background="#000000" />

    <TextView
        android:id="@+id/tv_composit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/line_view_2"
        android:text="@string/home_text_composit"
        android:textColor="#0000" />

    <LinearLayout
        android:id="@+id/view_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_composit"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+1.0"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:text="G"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+1.0"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_csv"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="#FF1980CA"
        android:gravity="center"
        android:text="CSV"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tv_csv"
        android:layout_below="@id/view_g"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="Pressure Map"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/ic_left" />
    </LinearLayout>


</RelativeLayout>